linear model and optimization

--- a/Introduction to Deep Learning/week01_Linear models and optimization.ipynb
+++ b/Introduction to Deep Learning/week01_Linear models and optimization.ipynb
@@ -46,8 +46,8 @@
    "outputs": [],
    "source": [
     "# token expires every 30 min\n",
-    "COURSERA_TOKEN = \"MCloXjM63dn89B1L\"\n",
-    "COURSERA_EMAIL = \"wanghaitang.ufl@gmail.com\""
+    "COURSERA_TOKEN = \".....\"\n",
+    "COURSERA_EMAIL = \".....\""
    ]
   },
   {
